--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "expo": "^51.0.0",
@@ -20,7 +21,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "3.10.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0"
@@ -28,6 +29,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "typescript": "~5.3.3"
   },
   "private": true
