--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.5",
+    "@expo/metro-runtime": "~3.2.3",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
@@ -23,6 +25,7 @@
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0"
   },
